// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListChart Markdown component should render a placeholder when data is undefined 1`] = `
<div
  className="ListChart "
>
  <Loader />
</div>
`;

exports[`ListChart Markdown component should render the data passed by mapStateToProps 1`] = `
<div
  className="ListChart custom-class"
>
  <ul>
    <li
      key="id2"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#ffcc00",
            }
          }
        >
          <span>
            33
          </span>
        </div>
        <span
          className="list-label"
        >
          label2
        </span>
      </div>
    </li>
    <li
      key="id1"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#ffd633",
            }
          }
        >
          <span>
            25
          </span>
        </div>
        <span
          className="list-label"
        >
          label1
        </span>
      </div>
    </li>
    <li
      key="id3"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#ffe066",
            }
          }
        >
          <span>
            13
          </span>
        </div>
        <span
          className="list-label"
        >
          label3
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListChart Markdown component when excludeZero should render without zero values 1`] = `
<div
  className="ListChart custom-class"
>
  <ul>
    <li
      key="id2"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#ffcc00",
            }
          }
        >
          <span>
            33
          </span>
        </div>
        <span
          className="list-label"
        >
          label2
        </span>
      </div>
    </li>
    <li
      key="id1"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#ffd633",
            }
          }
        >
          <span>
            25
          </span>
        </div>
        <span
          className="list-label"
        >
          label1
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListChart Markdown component when passing scatter parameter should display nested values with a composed label 1`] = `
<div
  className="ListChart custom-class"
>
  <ul>
    <li
      key="ipqlonrw89k"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#ffcc00",
            }
          }
        >
          <span>
            3
          </span>
        </div>
        <span
          className="list-label"
        >
          Nest A - A3
        </span>
      </div>
    </li>
    <li
      key="7pu7fcxl8eg"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#ffd633",
            }
          }
        >
          <span>
            1
          </span>
        </div>
        <span
          className="list-label"
        >
          Nest A - A2
        </span>
      </div>
    </li>
    <li
      key="jpw985bxwwg"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#ffe066",
            }
          }
        >
          <span>
            1
          </span>
        </div>
        <span
          className="list-label"
        >
          Nest B - B1
        </span>
      </div>
    </li>
    <li
      key="zlel1nllvs"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#ffeb99",
            }
          }
        >
          <span>
            0
          </span>
        </div>
        <span
          className="list-label"
        >
          Nest A - A1
        </span>
      </div>
    </li>
    <li
      key="cbe3spt1k8o"
    >
      <div>
        <div
          className="list-bullet"
          style={
            Object {
              "backgroundColor": "#fff5cc",
            }
          }
        >
          <span>
            0
          </span>
        </div>
        <span
          className="list-label"
        >
          Nest B - B2
        </span>
      </div>
    </li>
  </ul>
</div>
`;
